syntax = "proto3";

import "api.proto";
import "recall.proto";
import "errmsg.proto";

package rank;
option go_package = "go_server/src/lib/proto/rank";

message RankReq {
    api.RecReq req               = 1;
    recall.RecallResp recallResp = 2;
    string bucket                = 3;
}

message RankResp {
    errmsg.ErrMsg err                     = 1;
    repeated recall.RecallRespItems items = 2;
}

service Rank {
    rpc Rank (RankReq) returns (RankResp) {}
}
